<resources>
    <string name="app_name">Nedbank Eco Bank</string>
    <string name="logo">Nedbank logo</string>
    <string name="information">PLEASE PROVIDE US WITH YOUR INFORMATION</string>
    <string name="in_name">NAME</string>
    <string name="in_surn">SURNAME</string>
    <string name="in_mail">E-MAIL</string>
    <string name="in_cell">CELL PHONE NUMBER</string>
    <string name="agree">I AGREE TO ALL&#10;TERMS AND CONDITIONS</string>
    <string name="disagree">To Continue, you have to agree to the terms and conditions</string>
    <string name="btn_continue">CONTINUE</string>
    <string name="tanzania">tanzania</string>
    <string name="sudan">sudan</string>
    <string name="algeria">algeria</string>
    <string name="angola">angola</string>
    <string name="morocco">morocco</string>
    <string name="tunisia">tunisia</string>
    <string name="libya">libya</string>
    <string name="benin">benin</string>
    <string name="botswana">botswana</string>
    <string name="burkina_faso">burkina_faso</string>
    <string name="burundi">burundi</string>
    <string name="cameroon">cameroon</string>
    <string name="central_african_republic">central_african_republic</string>
    <string name="chad">chad</string>
    <string name="democratic_rebpulic_of_congo">democratic_rebpulic_of_congo</string>
    <string name="djbiouti">djbiouti</string>
    <string name="egypt">egypt</string>
    <string name="equatorial_guinea">equatorial_guinea</string>
    <string name="eritrea">eritrea</string>
    <string name="ethiopia">ethiopia</string>
    <string name="gabon">gabon</string>
    <string name="gambia">gambia</string>
    <string name="ghana">ghana</string>
    <string name="ghana_uppercase">GHANA</string>
    <string name="guinea">guinea</string>
    <string name="guinea_bissau">guinea_bissau</string>
    <string name="ivory_coast">ivory_coast</string>
    <string name="kenya">kenya</string>
    <string name="liberia">liberia</string>
    <string name="rawanda">rawanda</string>
    <string name="madagascar">madagascar</string>
    <string name="malawi">malawi</string>
    <string name="malawi_uppercase">MALAWI</string>
    <string name="mali">mali</string>
    <string name="mauritania">mauritania</string>
    <string name="mozambique">mozambique</string>
    <string name="namibia">namibia</string>
    <string name="niger">niger</string>
    <string name="nigeria">nigeria</string>
    <string name="nigeria_uppercase">NIGERIA</string>
    <string name="rebpulic_of_congo">rebpulic_of_congo</string>
    <string name="senegal">senegal</string>
    <string name="sierra_leone">sierra_leone</string>
    <string name="togo">togo</string>
    <string name="uganda">uganda</string>
    <string name="western_sahara">western_sahara</string>
    <string name="zambia">zambia</string>
    <string name="zambia_uppercase">ZAMBIA</string>
    <string name="zimbabwe">zimbabwe</string>
    <string name="zimbabwe_uppercase">ZIMBABWE</string>
    <string name="background_image_for_page">background image for page</string>
    <string name="find_them">CAN YOU FIND THEM?</string>
    <string name="seconds">IT TAKES SECONDS</string>
    <string name="sendmoney">for Nedbank and Ecobank to send money to up to 33 countries, in fact it is so quick that
        you would struggle to find 33 countries in the time it takes to send a money transfer!
    </string>
    <string name="democratic_republic_of_congo">democratic_republic_of_congo</string>
    <string name="south_africa">south_africa</string>
    <string name="somolia">somolia</string>
    <string name="south_sudan">south_sudan</string>
    <string name="angola_smal">angola_smal</string>
    <string name="pointout">POINT OUT ON THE MAP WHERE YOU THINK THE FOLLOWING COUNTRIES ARE:</string>
    <string name="loading">Loading...</string>
    <string name="did_you_know">Did You Know...</string>
    <string name="button">Button</string>
    <string name="marketing_question">Would you like Nedbank to contact you for marketing purposes?</string>
    <string name="your_country_of_origin">Your Country of Origin?</string>

</resources>
