<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".map">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/game_bg"
            android:id="@+id/bg"
            android:contentDescription="@string/background_image_for_page" android:scaleX="1.2" android:scaleY="1.2"
            tools:srcCompat="@mipmap/game_bg"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/nedbankLogo"
            android:scaleType="fitCenter"
            android:baselineAlignBottom="false"
            android:layout_centerInParent="false"
            android:src="@drawable/nedbank"
            android:contentDescription="@string/logo"
            android:background="#00FFFFFF"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="false"
            app:layout_constraintTop_toBottomOf="parent" app:layout_constraintEnd_toStartOf="parent"
            android:layout_marginTop="20dp" android:layout_marginEnd="20dp"/>
    <RelativeLayout
            android:layout_width="700dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="false"
            tools:layout_editor_absoluteY="50dp"
            tools:layout_editor_absoluteX="208dp"
            android:layout_centerInParent="true" android:scaleX="1.3" android:scaleY="1.3"
            android:layout_marginTop="-50dp">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@mipmap/countries33"
                android:id="@+id/countries"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="0dp"
                app:layout_constraintStart_toStartOf="parent"

                android:scaleX="0.7"
                android:scaleY="0.7"
        />
    </RelativeLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_alignParentBottom="false"
            android:gravity="bottom|center_horizontal">
        <TextView
                android:text="@string/seconds"
                android:layout_width="331dp"
                android:layout_height="50dp"
                android:id="@+id/question"
                tools:text="@string/seconds"
                android:textSize="30sp"
                android:fontFamily="@font/nedbanksansbold"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
        />
        <TextView
                android:text="@string/sendmoney"
                android:layout_width="331dp"
                android:layout_height="wrap_content"
                android:id="@+id/description"
                tools:text="@string/sendmoney"
                android:textSize="14sp"
                android:fontFamily="@font/nedbanksansbold"
                android:textColor="@color/colorPrimary"
                android:paddingBottom="50dp"
                android:gravity="center"
        />
    </LinearLayout>
</RelativeLayout>